--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "validator": "^13.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,7 +25,6 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "axios": "^0.27.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
